--- a/src/locales/en/contact.json
+++ b/src/locales/en/contact.json
@@ -1,16 +1,16 @@
 {
-    "description": "Contact Anavaree Thai Massage in Wilmersdorf, Berlin. Book authentic Thai treatments with certified therapist Khun Pui. Enquiries welcome.",
+    "description": "Book your Thai massage appointment in Gazzada Schianno. Government-certified therapist, free parking available. Contact Ann for personalized therapeutic care today.",
     "landing": "Contact",
     "topper": "Contact",
     "title": "Get in Touch",
-    "text": "Have questions about our traditional Thai massage treatments? We're here to help with any enquiries about our services or location.",
+    "text": "Have questions about our Thai massage treatments? We're here to help with any enquiries about our services or location.",
     "info": {
         "phone": {
             "label": "Phone"
         },
         "hours": {
             "label": "Opening Hours",
-            "value": "Mon - Sun: 10am - 8pm"
+            "value": "Mon: 2-7pm | Tue - Sat: 9am-1.30pm, 2.30-7pm | Sun: Closed"
         },
         "address": {
             "label": "Address"
